--- a/assets/css/blocks/banner_small.scss
+++ b/assets/css/blocks/banner_small.scss
@@ -10,8 +10,12 @@
     padding-left: 6.7em;
   }
 
+  @media screen and (max-width: 960px) {
+    padding-left: 0;
+  }
+
   @media screen and (max-width: 650px) {
-    height: 21.7vh;
+    height: 25.7vh;
   }
   figure {
     img {
@@ -60,14 +64,14 @@
       left: 5.2em;
     }
     @media screen and (max-width: 960px) {
-      left: 6em;
-      bottom: 4vh;
+      left: 3em;
+      bottom: 2vh;
       top: unset;
       right: unset;
     }
 
     @media screen and (max-width: 380px) {
-      width: 94.4%;
+      width: 89%;
     }
 
     .logo_title {
@@ -75,14 +79,14 @@
       display: flex;
 
       figure.wp-block-image.hero-decor {
-        width: 30.4%;
+        width: 15.1%;
         z-index: 3;
         opacity: 0;
         visibility: hidden;
         margin: 0;
 
         @media screen and (max-width: 960px) {
-          width: 12.4%;
+          width: 10.4%;
         }
         img {
           display: block;
@@ -108,19 +112,35 @@
         padding-right: 1.8em;
         margin: 0;
         white-space: nowrap;
+
+        @media screen and (max-width: 1400px) {
+          font-size: 1.26em;
+        }
+
+        @media screen and (max-width: 960px) {
+          min-width: 220px;
+          max-width: 300px;
+          white-space: pre-wrap;
+          width: 100%;
+          font-size: 1.2em !important;
+        }
+
+        @media screen and (max-width: 600px) {
+          font-size: 1em !important;
+        }
       }
     }
 
     .wp-block-buttons {
-      max-width: 381px;
+      max-width: 301px;
       display: flex;
       width: 100%;
       justify-content: flex-end;
-      @media screen and (max-width: 960px) {
+      @media screen and (max-width: 1100px) {
         display: none;
       }
       .wp-block-button {
-        max-width: 381px;
+        max-width: 301px;
         display: flex;
         width: 100%;
         justify-content: flex-end;
