--- a/assets/css/blocks/footer.scss
+++ b/assets/css/blocks/footer.scss
@@ -70,21 +70,19 @@
         &.button {
           a {
             color: #282626 !important;
-            padding: 27px 32px !important;
+            padding: 19px 32px !important;
             font-weight: 600 !important;
             text-transform: uppercase;
             letter-spacing: 0.5px;
             cursor: pointer;
             transition: all 0.3s ease-in-out;
-            width: auto;
             background-color: #ffffff;
-            max-width: 18rem;
             position: relative;
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 0.8rem;
-            max-width: 381px;
+            font-size: 16px;
+            max-width: 301px;
             width: 100%;
             &::after {
               display: none;
@@ -156,22 +154,19 @@
       }
 
       input[type="submit"] {
-        letter-spacing: 2px;
         text-transform: uppercase;
         color: #282626;
-        font-weight: 700;
         background: #ffffff;
         border: none;
-        padding: 1.4rem 2rem;
-        max-width: 18rem;
-        font-size: 0.8rem;
+        padding: 20px 32px !important;
+        font-size: 16px;
         cursor: pointer;
         border: 1px solid #ffffff;
         transition: all 0.3s ease-in-out;
         margin-top: 3.15rem;
         border-radius: 0;
         font-weight: 600 !important;
-        max-width: 381px;
+        max-width: 301px;
         width: 100%;
 
         &:hover {
@@ -205,8 +200,8 @@
     align-items: center;
     justify-content: center;
     color: #fff;
-    padding: 1.75em 7.35vw;
-    padding-top: 0;
+    padding: 1.75em 7.35vw !important;
+    padding-top: 1.45em !important;
     transform: translateY(-1px);
     border: 1px solid rgba(255, 255, 255, 0.3);
 
@@ -252,27 +247,27 @@
 
 .footer_botton {
   position: relative;
-  max-width: 381px;
+  max-width: 301px;
   width: 100%;
   .wp-block-button {
     position: relative;
-    max-width: 381px;
+    max-width: 301px;
     width: 100%;
     .wp-block-button__link {
       position: relative;
-      max-width: 381px;
+      max-width: 301px;
       width: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
-      font-size: 0.8rem;
+      font-size: 16px;
       background-color: #ffffff !important;
       color: #282626 !important;
       border-color: #ffffff;
-      padding: 27px 32px !important;
+      padding: 19px 32px !important;
       transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out,
         border 0.3s ease-in-out;
-      font-weight: 700;
+      font-weight: 600;
       line-height: 1.2;
 
       &:hover {
