--- a/assets/css/blocks/hero.scss
+++ b/assets/css/blocks/hero.scss
@@ -20,6 +20,10 @@ section.hero {
     height: 100%;
     overflow: hidden;
 
+    @media screen and (max-width: 960px) {
+      height: 65vh;
+    }
+
     .hero-content {
       position: relative;
       display: flex;
@@ -50,6 +54,17 @@ section.hero {
         margin-right: 6.5em;
       }
 
+      @media screen and (max-width: 960px) {
+        position: absolute;
+        max-width: 100%;
+        width: 80%;
+        margin: 0 auto;
+        top: 36%;
+        left: 10%;
+        height: 300px !important;
+        padding: 30px 40px !important;
+      }
+
       @media screen and (min-width: 2000px) {
         max-width: 28.5%;
       }
@@ -71,18 +86,13 @@ section.hero {
           font-size: 2.8em;
         }
 
-        // @media screen and (min-width: 1100px) {
-        //     font-size: 3em;
-        // }
-        // @media screen and (min-width: 1340px) {
-        //     font-size: 3.5em;
-        // }
-        // @media screen and (min-width: 1650px) {
-        //     font-size: 4em;
-        // }
-        // @media screen and (min-width: 1900px) {
-        //     font-size: 2.5em;
-        // }
+        @media screen and (max-width: 960px) {
+          font-size: 2em;
+        }
+
+        @media screen and (max-width: 450px) {
+          font-size: 1.8em;
+        }
       }
       .wp-block-button {
         position: relative;
@@ -91,6 +101,10 @@ section.hero {
 
       a.wp-block-button__link {
         min-width: 100%;
+
+        @media screen and (max-width: 450px) {
+          font-size: 14px;
+        }
       }
     }
 
@@ -171,8 +185,12 @@ section.hero {
     height: 100%;
 
     @media screen and (min-width: 960px) {
-      // margin-left: 7.5%;
       height: 90%;
+    }
+
+    @media screen and (max-width: 960px) {
+      position: relative;
+      top: unset;
     }
 
     .swiper-slide {
@@ -182,7 +200,7 @@ section.hero {
         padding-left: 6.2em;
       }
       @media screen and (max-width: 960px) {
-        padding-left: 6em;
+        padding-left: 0em;
       }
 
       img {
@@ -210,5 +228,14 @@ section.hero {
         object-fit: cover;
       }
     }
+  }
+}
+
+@media screen and (max-width: 450px) {
+  #hero
+    .wp-block-group.hero-content.is-layout-flow.wp-block-group-is-layout-flow {
+    top: 38%;
+    height: 260px !important;
+    padding: 25px 25px !important;
   }
 }
