--- a/assets/css/blocks/services-slider.scss
+++ b/assets/css/blocks/services-slider.scss
@@ -62,6 +62,14 @@ section.services-slider {
         display: flex;
         flex-direction: column;
         height: 100%;
+
+        .swiper-wrapper {
+          .swiper-slide {
+            &.swiper-slide-active {
+              z-index: 1;
+            }
+          }
+        }
       }
 
       .swiper-wrapper {
@@ -136,30 +144,30 @@ section.services-slider {
 
       a {
         position: relative;
-        display: block;
-        background: transparent;
-        text-decoration: none;
-        color: #ffffff;
-        font-weight: 700;
-        font-size: 0.8em;
-        padding: 1.4625em 3.2em;
-        border: 1px solid;
+        max-width: 301px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 16px;
+        background-color: #ffffff !important;
+        color: #282626 !important;
+        border-color: #ffffff;
+        padding: 22px 2em !important;
+        transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out,
+          border 0.3s ease-in-out;
+        font-weight: 600;
+        line-height: 1.2;
         border-radius: 0;
-        line-height: 1.3;
         text-transform: uppercase;
-        transition: all 0.3s ease-in-out;
-        text-align: center;
-
-        @media screen and (min-width: 960px) {
-          min-width: 18em;
-          width: 100%;
-          max-width: max-content;
+        text-decoration: none;
+        @media screen and (max-width: 950px) {
+          margin: 0 auto;
         }
-
         &:hover {
-          background: #fff !important;
-          color: #282626;
-          border-color: #ed1849;
+          background-color: #282626 !important;
+          border-color: #282626;
+          color: #ffffff !important;
         }
       }
 
@@ -231,28 +239,6 @@ section.services-slider {
       }
     }
   }
-
-  // &:before {
-  //     content: "";
-  //     background: #dcdcdc;
-  //     width: 1px;
-  //     height: 14.55rem;
-  //     position: absolute;
-  //     left: 12.45rem;
-  //     top: 0;
-  //     z-index: -1;
-  // }
-
-  // &:after {
-  //     content: "";
-  //     background: #dcdcdc;
-  //     height: 1px;
-  //     width: 14.55rem;
-  //     position: absolute;
-  //     right: 0;
-  //     bottom: 12.45rem;
-  //     z-index: -1;
-  // }
 }
 
 .swiper-nav {
